# TaskTrack

task_track/: Cargo.toml  README.md
task_track/migrations/: 001_create_users.sql  002_create_tasks.sql
task_track/src/: config.rs  main.rs
task_track/src/domain/: auth.rs  mod.rs  task.rs  users.rs
task_track/src/infra/: db.rs  repositories.rs
